# PhilipRLFX

./: ANALYSIS_INDEX.md  MODERNIZATION.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.txt  README.md  TECHNICAL_RECOMMENDATIONS.md  ensemble_strategy.py  indicators.py  performance_metrics.py  pyproject.toml  risk_management.py  rl.py
classifications/: alexnet.py  lenet.py  use_alexnet.py  use_lenet.py
quantopians/: quantopian_strat_bb.py
tests/: __init__.py  test_indicators.py  test_performance_metrics.py  test_risk_management.py  test_rl.py
transformations/: gaf.py  mtf.py
